# project_cv

./: .gitignore  CMakeLists.txt  README.md
docs/: paths.txt  paths_segmentation.txt  references.txt
include/: detect_balls.h  detect_balls.hpp  detect_contours.h  detect_contours.hpp  detect_table.h  detect_table.hpp  draw_table.hpp  find_perspective.h  find_perspective.hpp  generate_coords.hpp  generate_mask.hpp  model_evaluation.hpp  table_corners.h  table_corners.hpp
src/: detect_and_classify_balls.cpp  detect_balls.cpp  detect_contours.cpp  detect_table.cpp  draw_table.cpp  find_perspective.cpp  generate_coords.cpp  generate_mask.cpp  main.cpp  model_evaluation.cpp  table_corners.cpp
